--- a/resume/style.css
+++ b/resume/style.css
@@ -9,6 +9,13 @@ h1 {
     font-size: 5.625rem;
     margin: 50px auto 0 auto;
     font-family: "Sacramento", cursive;
+    display: block;
+    
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
   }
   
   h2 {
